--- a/test/test.org
+++ b/test/test.org
@@ -8,7 +8,19 @@
 :ID:       8335CF4B-A5ED-4E10-8E3A-3A2A48E2AB76
 :END:
 
+
+
 #+begin_src emacs-lisp
+(defun org-tidy ()
+  "Tidy."
+  (interactive)
+  (save-excursion
+    (goto-char (point-min))
+    (while (re-search-forward org-property-drawer-re nil t)
+        (let* ((beg (match-beginning 0))
+               (end (1+ (match-end 0))))
+          (org-tidy-hide beg end)))))
+
 (defun org-tidy ()
   "Tidy."
   (interactive)
@@ -27,6 +39,25 @@ s
 (org-tidy-src)
 #+end_src
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+#+begin_src emacs-lisp
+(put-text-property 169 235 'display "♯")
+#+end_src
+
+#+begin_src emacs-lisp
+(put-text-property 169 235 'org-tidied t)
+#+end_src
+
+#+begin_src emacs-lisp
+(remove-text-properties 169 250 '(display ""))
+#+end_src
+
+#+begin_src emacs-lisp
+(get-text-property 171 'org-tidied)
+(next-single-property-change 169 'org-tidied)
+(text-properties-at 158)
+#+end_src
+
+wer
+fwerLorem ipsum dolor sit amet, consectetur adipiscing elit.
 
 Maecenas vel arcu tempor, luctus mauris nec, aliquet est. Aliquam tincidunt magna nisi. In eget tempor ligula. Suspendisse interdum justo velit, in rutrum magna porttitor pellentesque. Sed tempus blandit magna, sed iaculis neque. Donec est mi, placerat quis tincidunt ac, vulputate ac libero. Maecenas vitae felis accumsan, varius nibh ac, volutpat leo. Etiam a nibh fermentum magna tempor pellentesque ac non orci.
