--- a/test/test.org
+++ b/test/test.org
@@ -36,13 +36,13 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 
 Maecenas vel arcu tempor, luctus mauris nec, aliquet est. Aliquam tincidunt magna nisi. In eget tempor ligula. Suspendisse interdum justo velit, in rutrum magna porttitor pellentesque. Sed tempus blandit magna, sed iaculis neque. Donec est mi, placerat quis tincidunt ac, vulputate ac libero. Maecenas vitae felis accumsan, varius nibh ac, volutpat leo. Etiam a nibh fermentum magna tempor pellentesque ac non orci.
 
-** This is heading 1.1d
+** This is heading 1
 :PROPERTIES:
 :ID:       FD92060B-272D-4E6B-852B-303FAD053C0B
 :END:
-Maecenas vel arcu tempor, luctus mauris nec, aliquet est. Aliquam tincidunt magna nisi. In eget tempor ligula. Suspendisse interdum justo velit, in rutrum magna porttitor pellentesque. Sed tempus blandit magna, sed iaculis neque. Donec est mi, placerat quis tincidunt ac, vulputate ac libero. Maecenas vitae felis accumsan, varius nibh ac, volutpat leo. Etiam a nibh fermentum magna tempor pellentesque ac non orci.
+awerewrs vel arcu tempor, luctus mauris nec, aliquet est. Aliquam tincidunt magna nisi. In eget tempor ligula. Suspendisse interdum justo velit, in rutrum magna porttitor pellentesque. Sed tempus blandit magna, sed iaculis neque. Donec est mi, placerat quis tincidunt ac, vulputate ac libero. Maecenas vitae felis accumsan, varius nibh ac, volutpat leo. Etiam a nibh fermentum magna tempor pellentesque ac non orci.
 
-*** This is heading 1.2.1
+*** This is heading 1.2.1f
 :PROPERTIES:
 :ID:       22D3A40A-9ADB-4B1E-A7E3-464A638458ED
 :END:
@@ -54,7 +54,7 @@ Maecenas vel arcu tempor, luctus mauris nec, aliquet est. Aliquam tincidunt magn
 (put-text-property 1986 2052 'read-only t)
 
 (put-text-property 169 235 'org-tidied t)
-(remove-text-properties 2181 2247 '(read-only t))
+(remove-text-properties 1 (point-max) '(read-only nil))
 (get-text-property 171 'org-tidied)
 (next-single-property-change 169 'org-tidied)
 (text-properties-at 158)
