--- a/test/test.org
+++ b/test/test.org
@@ -40,7 +40,13 @@ Maecenas vel arcu tempor, luctus mauris nec, aliquet est. Aliquam tincidunt magn
 :PROPERTIES:
 :ID:       FD92060B-272D-4E6B-852B-303FAD053C0B
 :END:
+
 awerewrs vel arcu tempor, luctus mauris nec, aliquet est. Aliquam tincidunt magna nisi. In eget tempor ligula. Suspendisse interdum justo velit, in rutrum magna porttitor pellentesque. Sed tempus blandit magna, sed iaculis neque. Donec est mi, placerat quis tincidunt ac, vulputate ac libero. Maecenas vitae felis accumsan, varius nibh ac, volutpat leo. Etiam a nibh fermentum magna tempor pellentesque ac non orci.
+
+werf
+e
+wer
+
 
 *** This is heading 1.2.1f
 :PROPERTIES:
@@ -52,10 +58,18 @@ awerewrs vel arcu tempor, luctus mauris nec, aliquet est. Aliquam tincidunt magn
   "Face for the before string.")
 
 (put-text-property 1986 2052 'read-only t)
-
+(put-text-property 205 206 'font-lock-face 'region nil)
 (put-text-property 169 235 'org-tidied t)
 (remove-text-properties 1 (point-max) '(read-only nil))
 (get-text-property 171 'org-tidied)
 (next-single-property-change 169 'org-tidied)
-(text-properties-at 158)
+
+(text-properties-at 1687)
+
+(put-text-property 1687 1689 'keymap org-tidy-properties-backspace-map nil)
+
+(org-unfontify-region 1687 1689)
+
+(add-text-properties 1269 1270 '(keymap org-tidy-properties-backspace-map))
+(put-text-property 1269 1270 'org-tidied t)
 #+end_src
