--- a/README.org
+++ b/README.org
@@ -1,4 +1,13 @@
-#+title: org-tidy - Tidy org-mode buffers
+#+title: org-tidy
 #+author: Xuqing Jia
 
-Org-mode buffer with a lot of property drawers is really annoying. Even after they are folded, there are still lines like ~:PROPERTIES: ...~ , which makes the whole org-mode buffer hard to read.
+An Emacs minor mode to automatically tidy org-mode property drawers.
+
+* Why?
+Org-mode's property drawer is a very useful feature. We can store properties associated with an entry in property drawer. I use org-roam every day. And org-roam node is an entry with ID property. But if I create many nodes in a single file, there will be a lot of property drawers. This is really annoying. Even after they are folded, there are still lines like ~:PROPERTIES: ...~ , which makes the whole buffer hard to read.
+
+At first I googled for some tricks to hide property drawers completely. And I found there are many people like me who are bothered by this problem. Of course there are solutions. But these solutions involve a lot of code. So I made this package.
+
+* Feature
+
+* Customize
