--- a/README.org
+++ b/README.org
@@ -9,6 +9,9 @@ Org-mode's property drawer is a very useful feature. We can store properties ass
 At first I googled for some tricks to hide property drawers completely. And I found there are many people like me who are bothered by this problem. Of course there are solutions. But these solutions involve a lot of code. So I made this package.
 
 * Screenshots
-https://raw.githubusercontent.com/jxq0/org-tidy/main/screenshot.png
+
+@@html:<div align="center">@@
+@@html:<img src='https://raw.githubusercontent.com/jxq0/org-tidy/main/screenshot.png'>@@
+@@html:</div>@@
 
 * Customize
