--- a/test/test.org
+++ b/test/test.org
@@ -96,6 +96,7 @@ awerewrs vel arcu tempor, luctus mauris nec, aliquet est. Aliquam tincidunt magn
 *** This is heading 1.2.1f
 :PROPERTIES:
 :ID:       22D3A40A-9ADB-4B1E-A7E3-464A638458ED
+:xx:       werweou
 :END:
 #+begin_src emacs-lisp
 (org-tidy-buffer)
