check overlay exists before save

--- a/test/multiple-drawers.org
+++ b/test/multiple-drawers.org
@@ -8,4 +8,9 @@
 [2023-09-10 Sun 15:44] <- [[id:381d4b7d-d27c-475c-83df-d89f853bf991][a]]
 :END:
 
-awerewrs vel arcu
+awerewrs vel arcuss
+** heading 2
+:PROPERTIES:
+:ID:       D09C9800-D203-4F38-B802-67362180FD20
+:END:
+werss
